removed / to fix cors error

--- a/config.env
+++ b/config.env
@@ -4,4 +4,4 @@ DATABASE_URL = mongodb+srv://mohit-rbac:<DATABASE_PASSWORD>@rbac-cluster.pbczk.m
 DATABASE_NAME = rbac
 DATABASE_PASSWORD = mohit-rbac
 NODE_ENV = development
-CLIENT_PORT = https://rbac-mohitjaiswal.netlify.app/
+CLIENT_PORT = https://rbac-mohitjaiswal.netlify.app
